--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
         <script>
             load("#footer", "./templates/footer.html");
         </script>
+        <script type="module" src="./assets/js/scripts.js"></script>
     </body>
 </html>
