--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                 <div class="product__filter-board">
                                     <section class="filter">
                                         <p class="filter__header">Filter</p>
-                                        <form action="#!" class="filter__form">
+                                        <form class="filter__form">
                                             <div class="filter__body">
                                                 <!--  -->
                                                 <div class="filter__section">
@@ -241,8 +241,8 @@
                                                 </div>
                                                 <!--  -->
                                                 <div
-                                                    class="filter__separator"
-                                                    style="margin: 0 30px;"
+                                                    class="filter__separator filter__separator--rotate"
+                                                    
                                                 ></div>
                                                 <!--  -->
                                                 <div class="filter__section">
@@ -268,7 +268,9 @@
                                                         </div>
                                                         <div
                                                             class="filter__separator"
-                                                            style="margin: 0 14px;"
+                                                            style="
+                                                                margin: 0 14px;
+                                                            "
                                                         ></div>
                                                         <div
                                                             class="filter__sizeList-unit"
@@ -320,8 +322,8 @@
                                                 </div>
                                                 <!--  -->
                                                 <div
-                                                    class="filter__separator"
-                                                    style="margin: 0 30px;"
+                                                    class="filter__separator filter__separator--rotate"
+                                                    
                                                 ></div>
                                                 <!--  -->
                                                 <div class="filter__section">
@@ -330,7 +332,10 @@
                                                     </div>
 
                                                     <div class="filter__search">
-                                                        <input type="text" placeholder="Search brand name" />
+                                                        <input
+                                                            type="text"
+                                                            placeholder="Search brand name"
+                                                        />
                                                         <img
                                                             src="./assets/icon/search.svg"
                                                             alt=" "
@@ -363,7 +368,7 @@
                                                         >
                                                             Large
                                                             <input
-                                                                name="filter-size"
+                                                                name="filter-brand"
                                                                 type="radio"
                                                             />
                                                         </label>
