--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
                                 class="row row-cols-3 row-cols-md-1 gx-4 gx-lg-2 gy-md-2"
                             >
                                 <div class="col">
-                                    <article class="category__item">
+                                    <a
+                                        href="./production.html"
+                                        class="category__item"
+                                    >
                                         <div class="category__item-thumb">
                                             <img
                                                 src="./assets/img/category/cate-item-1.png"
@@ -139,10 +142,13 @@
                                                 blend
                                             </p>
                                         </div>
-                                    </article>
+                                    </a>
                                 </div>
                                 <div class="col">
-                                    <article class="category__item">
+                                    <a
+                                        href="./production.html"
+                                        class="category__item"
+                                    >
                                         <div class="category__item-thumb">
                                             <img
                                                 src="./assets/img/category/cate-item-2.png"
@@ -159,10 +165,13 @@
                                                 beans
                                             </p>
                                         </div>
-                                    </article>
+                                    </a>
                                 </div>
                                 <div class="col">
-                                    <article class="category__item">
+                                    <a
+                                        href="./production.html"
+                                        class="category__item"
+                                    >
                                         <div class="category__item-thumb">
                                             <img
                                                 src="./assets/img/category/cate-item-3.png"
@@ -179,7 +188,7 @@
                                                 coffee blend
                                             </p>
                                         </div>
-                                    </article>
+                                    </a>
                                 </div>
                             </div>
                         </section>
@@ -242,7 +251,6 @@
                                                 <!--  -->
                                                 <div
                                                     class="filter__separator filter__separator--rotate"
-                                                    
                                                 ></div>
                                                 <!--  -->
                                                 <div class="filter__section">
@@ -323,7 +331,6 @@
                                                 <!--  -->
                                                 <div
                                                     class="filter__separator filter__separator--rotate"
-                                                    
                                                 ></div>
                                                 <!--  -->
                                                 <div class="filter__section">
@@ -400,7 +407,10 @@
                             >
                                 <!-- item 1 -->
                                 <div class="col">
-                                    <article class="product__item">
+                                    <a
+                                        href="./production.html"
+                                        class="product__item"
+                                    >
                                         <div class="product__item-thumb">
                                             <img
                                                 src="./assets/img/product/product-1.png"
@@ -438,12 +448,15 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </article>
+                                    </a>
                                 </div>
 
                                 <!-- item 2 -->
                                 <div class="col">
-                                    <article class="product__item">
+                                    <a
+                                        href="./production.html"
+                                        class="product__item"
+                                    >
                                         <div class="product__item-thumb">
                                             <img
                                                 src="./assets/img/product/product-2.png"
@@ -481,12 +494,15 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </article>
+                                    </a>
                                 </div>
 
                                 <!-- item 3 -->
                                 <div class="col">
-                                    <article class="product__item">
+                                    <a
+                                        href="./production.html"
+                                        class="product__item"
+                                    >
                                         <div class="product__item-thumb">
                                             <img
                                                 src="./assets/img/product/product-3.png"
@@ -524,12 +540,15 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </article>
+                                    </a>
                                 </div>
 
                                 <!-- item 4 -->
                                 <div class="col">
-                                    <article class="product__item">
+                                    <a
+                                        href="./production.html"
+                                        class="product__item"
+                                    >
                                         <div class="product__item-thumb">
                                             <img
                                                 src="./assets/img/product/product-4.png"
@@ -567,13 +586,16 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </article>
+                                    </a>
                                 </div>
 
                                 <!-- item 4 -->
                                 <!-- item 3 -->
                                 <div class="col">
-                                    <article class="product__item">
+                                    <a
+                                        href="./production.html"
+                                        class="product__item"
+                                    >
                                         <div class="product__item-thumb">
                                             <img
                                                 src="./assets/img/product/product-3.png"
@@ -611,12 +633,15 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </article>
+                                    </a>
                                 </div>
 
                                 <!-- item 4 -->
                                 <div class="col">
-                                    <article class="product__item">
+                                    <a
+                                        href="./production.html"
+                                        class="product__item"
+                                    >
                                         <div class="product__item-thumb">
                                             <img
                                                 src="./assets/img/product/product-4.png"
@@ -654,14 +679,17 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </article>
+                                    </a>
                                 </div>
 
                                 <!-- item 4 -->
 
                                 <!-- item 1 -->
                                 <div class="col">
-                                    <article class="product__item">
+                                    <a
+                                        href="./production.html"
+                                        class="product__item"
+                                    >
                                         <div class="product__item-thumb">
                                             <img
                                                 src="./assets/img/product/product-1.png"
@@ -699,12 +727,15 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </article>
+                                    </a>
                                 </div>
 
                                 <!-- item 2 -->
                                 <div class="col">
-                                    <article class="product__item">
+                                    <a
+                                        href="./production.html"
+                                        class="product__item"
+                                    >
                                         <div class="product__item-thumb">
                                             <img
                                                 src="./assets/img/product/product-2.png"
@@ -742,7 +773,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </article>
+                                    </a>
                                 </div>
                             </div>
                         </section>
