--- a/production.html
+++ b/production.html
@@ -64,7 +64,7 @@
         <div class="production-page-wrap">
             <div class="container">
                 <div class="production">
-                    <div class="row gx-2 gy-md-3">
+                    <div class="row gx-2 gy-md-3 gx-3">
                         <div class="col col-5 col-md-12">
                             <img
                                 src="./assets/img/production/img-1.png"
@@ -85,15 +85,16 @@
                                         <div class="production__left">
                                             <div class="production__rate">
                                                 <img
-                                                    src=""
+                                                    src="./assets/icon/yeallow-star.svg"
                                                     alt=" "
                                                     class="production__rate-star"
                                                 />
 
                                                 <span
                                                     class="production__rate-stat"
-                                                ></span>
-                                                (3.5) 1100 reviews
+                                                >
+                                                    (3.5) 1100 reviews</span
+                                                >
                                             </div>
                                             <div class="filter__section">
                                                 <div class="filter__title">
@@ -173,7 +174,7 @@
                                                     class="production__shipping-item"
                                                 >
                                                     <img
-                                                        src=""
+                                                        src="./assets/icon/shiping-ord.svg"
                                                         alt=" "
                                                         class="production__shipping-item-icon"
                                                     />
@@ -182,17 +183,13 @@
                                                     >
                                                         Compare
                                                     </div>
-                                                    <div
-                                                        class="production__shipping-item-desc"
-                                                    >
-                                                        _
-                                                    </div>
+                                                    
                                                 </div>
                                                 <div
                                                     class="production__shipping-item"
                                                 >
                                                     <img
-                                                        src=""
+                                                        src="./assets/icon/shiping-deliver.svg"
                                                         alt=" "
                                                         class="production__shipping-item-icon"
                                                     />
@@ -211,7 +208,7 @@
                                                     class="production__shipping-item"
                                                 >
                                                     <img
-                                                        src=""
+                                                        src="./assets/icon/shiping-pickup.svg"
                                                         alt=" "
                                                         class="production__shipping-item-icon"
                                                     />
@@ -232,7 +229,7 @@
                                                 <div
                                                     class="production__price-origin"
                                                 >
-                                                    $540.00
+                                                    $ 540.00
                                                 </div>
                                                 <div
                                                     class="production__price-discount"
@@ -242,18 +239,18 @@
                                                 <div
                                                     class="production__price-final"
                                                 >
-                                                    $500.00
+                                                    $ 500.00
                                                 </div>
-                                                <button
-                                                    class="production__price-btn"
-                                                >
-                                                    Add to cart
-                                                </button>
-                                                <button
-                                                    class="production__add-fav"
-                                                >
-                                                    <img src="" alt=" " />
-                                                </button>
+                                                <div class="production__price-action">
+                                                    <button
+                                                        class="production__price-btn"
+                                                    >
+                                                        Add to cart
+                                                    </button>
+                                                    <div class="production__price-fav">
+                                                        <div class="fav-add"></div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
