--- a/production.html
+++ b/production.html
@@ -183,7 +183,6 @@
                                                     >
                                                         Compare
                                                     </div>
-                                                    
                                                 </div>
                                                 <div
                                                     class="production__shipping-item"
@@ -241,14 +240,20 @@
                                                 >
                                                     $ 500.00
                                                 </div>
-                                                <div class="production__price-action">
+                                                <div
+                                                    class="production__price-action"
+                                                >
                                                     <button
                                                         class="production__price-btn"
                                                     >
                                                         Add to cart
                                                     </button>
-                                                    <div class="production__price-fav">
-                                                        <div class="fav-add"></div>
+                                                    <div
+                                                        class="production__price-fav"
+                                                    >
+                                                        <div
+                                                            class="fav-add"
+                                                        ></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -256,6 +261,114 @@
                                     </div>
                                 </div>
                             </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="production-page-wrap">
+            <div class="container">
+                <div class="production__tabs">
+                    <button class="production__tab">Description</button>
+                    <button class="production__tab">Features</button>
+                    <button class="production__tab active">
+                        Review (1100)
+                    </button>
+                    <button class="production__tab">Similar</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="production-page-wrap">
+            <div class="container">
+                <div class="review">
+                    <p class="review__title">
+                        What our customers are saying
+                    </p>
+                    <div
+                        class="row row-cols-3 row-cols-lg-2 gy-lg-3 row-cols-md-1"
+                    >
+                        <div class="col">
+                            <div class="review__item">
+                                <div class="review__content">
+                                    <img
+                                        src="./assets/img/review/pic-1.jpg"
+                                        alt=" "
+                                        class="review__avatar"
+                                    />
+                                    <cite class="review__author"
+                                        >Jakir Hussen</cite
+                                    >
+                                    <blockquote class="review__quote">
+                                        Great product, I love this Coffee Beans
+                                    </blockquote>
+                                </div>
+                                <div class="review__rate">
+                                    <img
+                                        src="./assets/icon/yellow-stars.svg"
+                                        alt=" "
+                                        class="review__rate-star"
+                                    />
+                                    <span class="review__rate-label"
+                                        >(3.5) Review</span
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="review__item">
+                                <div class="review__content">
+                                    <img
+                                        src="./assets/img/review/pic-2.jpg"
+                                        alt=" "
+                                        class="review__avatar"
+                                    />
+                                    <cite class="review__author"
+                                        >Jubed Ahmed</cite
+                                    >
+                                    <blockquote class="review__quote">
+                                        Awesome Coffee, I love this Coffee Beans
+                                    </blockquote>
+                                </div>
+                                <div class="review__rate">
+                                    <img
+                                        src="./assets/icon/yellow-stars.svg"
+                                        alt=" "
+                                        class="review__rate-star"
+                                    />
+                                    <span class="review__rate-label"
+                                        >(3.5) Review</span
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="review__item">
+                                <div class="review__content">
+                                    <img
+                                        src="./assets/img/review/pic-3.jpg"
+                                        alt=" "
+                                        class="review__avatar"
+                                    />
+                                    <cite class="review__author"
+                                        >Delwar Hussain
+                                    </cite>
+                                    <blockquote class="review__quote">
+                                        Great product, I like this Coffee Beans
+                                    </blockquote>
+                                </div>
+                                <div class="review__rate">
+                                    <img
+                                        src="./assets/icon/yellow-stars.svg"
+                                        alt=" "
+                                        class="review__rate-star"
+                                    />
+                                    <span class="review__rate-label"
+                                        >(3.5) Review</span
+                                    >
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
