--- a/production.html
+++ b/production.html
@@ -176,7 +176,7 @@
                                                     <img
                                                         src="./assets/icon/shiping-ord.svg"
                                                         alt=" "
-                                                        class="production__shipping-item-icon"
+                                                        class="production__shipping-item-icon icon-color"
                                                     />
                                                     <div
                                                         class="production__shipping-item-type"
@@ -190,7 +190,7 @@
                                                     <img
                                                         src="./assets/icon/shiping-deliver.svg"
                                                         alt=" "
-                                                        class="production__shipping-item-icon"
+                                                        class="production__shipping-item-icon icon-color"
                                                     />
                                                     <div
                                                         class="production__shipping-item-type"
@@ -209,7 +209,7 @@
                                                     <img
                                                         src="./assets/icon/shiping-pickup.svg"
                                                         alt=" "
-                                                        class="production__shipping-item-icon"
+                                                        class="production__shipping-item-icon icon-color"
                                                     />
                                                     <div
                                                         class="production__shipping-item-type"
@@ -283,9 +283,7 @@
         <div class="production-page-wrap">
             <div class="container">
                 <div class="review">
-                    <p class="review__title">
-                        What our customers are saying
-                    </p>
+                    <p class="review__title">What our customers are saying</p>
                     <div
                         class="row row-cols-3 row-cols-lg-2 gy-lg-3 row-cols-md-1"
                     >
