--- a/user.html
+++ b/user.html
@@ -216,21 +216,169 @@
                                         <img
                                             src="./assets/img/user/visa-1.png"
                                             alt=" "
+                                            class="user-card__img--added"
                                         />
                                     </a>
                                     <a href="#!" class="user-card__img">
                                         <img
                                             src="./assets/img/user/visa-2.png"
                                             alt=" "
+                                            class="user-card__img--added"
                                         />
                                     </a>
-                                    <a href="#!" class="user-card__img">
-                                        <img
-                                            src="./assets/img/user/visa-add.svg"
-                                            alt=" "
-                                        />
+                                    <a
+                                        href="#!"
+                                        class="user-card__img user-card__img--add"
+                                    >
+                                        <svg
+                                            class="icon-color"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            width="23"
+                                            height="22"
+                                            viewBox="0 0 23 22"
+                                            fill="none"
+                                        >
+                                            <path
+                                                d="M11.4996 7.32715V14.6535"
+                                                stroke="#B9BABE"
+                                                stroke-width="1.5"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                            <path
+                                                d="M15.1663 10.9904H7.83301"
+                                                stroke="#B9BABE"
+                                                stroke-width="1.5"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                            <path
+                                                fill-rule="evenodd"
+                                                clip-rule="evenodd"
+                                                d="M16.1857 1H6.81429C3.54762 1 1.5 3.31208 1.5 6.58516V15.4148C1.5 18.6879 3.5381 21 6.81429 21H16.1857C19.4619 21 21.5 18.6879 21.5 15.4148V6.58516C21.5 3.31208 19.4619 1 16.1857 1Z"
+                                                stroke="#B9BABE"
+                                                stroke-width="1.5"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                        <span>Add New Card</span>
                                     </a>
                                 </div>
+                            </div>
+
+                            <div class="user-main-section">
+                                <div class="user-main-section-header">
+                                    <div
+                                        class="user-main-section-header__title"
+                                    >
+                                        Account info
+                                    </div>
+                                    <div class="user-main-section-header__desc">
+                                        Addresses, contact information and
+                                        password
+                                    </div>
+                                </div>
+                                <section class="user-info">
+                                    <div class="user-info__item">
+                                        <div class="user-info__icon">
+                                            <img
+                                                src="./assets/icon/user-nav/mail.svg"
+                                                alt=" "
+                                                class="icon-color"
+                                            />
+                                        </div>
+                                        <div class="user-info__label">
+                                            Email Address
+                                        </div>
+                                        <div class="user-info__info">
+                                            tarek97.ta@gmail.com
+                                        </div>
+                                    </div>
+                                    <div class="user-info__item">
+                                        <div class="user-info__icon">
+                                            <img
+                                                src="./assets/icon/user-nav/phone.svg"
+                                                alt=" "
+                                                class="icon-color"
+                                            />
+                                        </div>
+                                        <div class="user-info__label">
+                                            Phone number
+                                        </div>
+                                        <div class="user-info__info">
+                                            +000 11122 2345 657
+                                        </div>
+                                    </div>
+                                    <div class="user-info__item">
+                                        <div class="user-info__icon">
+                                            <img
+                                                src="./assets/icon/user-nav/addres.svg"
+                                                alt=" "
+                                                class="icon-color"
+                                            />
+                                        </div>
+                                        <div class="user-info__label">
+                                            Add an address
+                                        </div>
+                                        <div class="user-info__info">
+                                            Bangladesh Embassy, Washington, DC
+                                            20008
+                                        </div>
+                                    </div>
+                                </section>
+                            </div>
+                            <div class="user-main-section">
+                                <div class="user-main-section-header">
+                                    <div
+                                        class="user-main-section-header__title"
+                                    >
+                                        Account info
+                                    </div>
+                                    <div class="user-main-section-header__desc">
+                                        Addresses, contact information and
+                                        password
+                                    </div>
+                                </div>
+                                <section class="user-list">
+                                    <div class="user-list__item">
+                                        <img
+                                            src="./assets/img/product/product-4.png"
+                                            alt=" "
+                                            class="user-list__item-img"
+                                        />
+                                        <p class="user-list__item-title">
+                                            Coffee Beans - Espresso Arabica and
+                                            Robusta Beans
+                                        </p>
+                                        <div class="user-list__item-action">
+                                            <div class="user-list__item-price">
+                                                $47.00
+                                            </div>
+                                            <button class="user-list__item-btn">
+                                                Add to cart
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="user-list__item">
+                                        <img
+                                            src="./assets/img/product/product-1.png"
+                                            alt=" "
+                                            class="user-list__item-img"
+                                        />
+                                        <p class="user-list__item-title">
+                                            Lavazza Coffee Blends - Try the Italian Espresso
+                                        </p>
+                                        <div class="user-list__item-action">
+                                            <div class="user-list__item-price">
+                                                $53.00
+                                            </div>
+                                            <button class="user-list__item-btn">
+                                                Add to cart
+                                            </button>
+                                        </div>
+                                    </div>
+                                </section>
                             </div>
                         </section>
                     </div>
