--- a/user.html
+++ b/user.html
@@ -227,7 +227,7 @@
                                         />
                                     </a>
                                     <a
-                                        href="#!"
+                                        href="./add-cart.html"
                                         class="user-card__img user-card__img--add"
                                     >
                                         <svg
@@ -280,7 +280,10 @@
                                     </div>
                                 </div>
                                 <section class="user-info">
-                                    <div class="user-info__item">
+                                    <a
+                                        href="./add-info.html"
+                                        class="user-info__item"
+                                    >
                                         <div class="user-info__icon">
                                             <img
                                                 src="./assets/icon/user-nav/mail.svg"
@@ -294,8 +297,11 @@
                                         <div class="user-info__info">
                                             tarek97.ta@gmail.com
                                         </div>
-                                    </div>
-                                    <div class="user-info__item">
+                                    </a>
+                                    <a
+                                        href="./add-info.html"
+                                        class="user-info__item"
+                                    >
                                         <div class="user-info__icon">
                                             <img
                                                 src="./assets/icon/user-nav/phone.svg"
@@ -309,8 +315,11 @@
                                         <div class="user-info__info">
                                             +000 11122 2345 657
                                         </div>
-                                    </div>
-                                    <div class="user-info__item">
+                                    </a>
+                                    <a
+                                        href="./add-info.html"
+                                        class="user-info__item"
+                                    >
                                         <div class="user-info__icon">
                                             <img
                                                 src="./assets/icon/user-nav/addres.svg"
@@ -325,7 +334,7 @@
                                             Bangladesh Embassy, Washington, DC
                                             20008
                                         </div>
-                                    </div>
+                                    </a>
                                 </section>
                             </div>
                             <div class="user-main-section">
@@ -355,9 +364,12 @@
                                             <div class="user-list__item-price">
                                                 $47.00
                                             </div>
-                                            <button class="user-list__item-btn">
+                                            <a
+                                                href="#!"
+                                                class="user-list__item-btn"
+                                            >
                                                 Add to cart
-                                            </button>
+                                            </a>
                                         </div>
                                     </div>
                                     <div class="user-list__item">
@@ -367,15 +379,19 @@
                                             class="user-list__item-img"
                                         />
                                         <p class="user-list__item-title">
-                                            Lavazza Coffee Blends - Try the Italian Espresso
+                                            Lavazza Coffee Blends - Try the
+                                            Italian Espresso
                                         </p>
                                         <div class="user-list__item-action">
                                             <div class="user-list__item-price">
                                                 $53.00
                                             </div>
-                                            <button class="user-list__item-btn">
+                                            <a
+                                                href="#!"
+                                                class="user-list__item-btn"
+                                            >
                                                 Add to cart
-                                            </button>
+                                            </a>
                                         </div>
                                     </div>
                                 </section>
